--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <body>
+    <font face="Segoe UI">
     <div class = container>
         <b>Создание учетной записи</b>
         <p class = log>Почта:</p>
